# modelo_sistema_de_corte

./: .gitignore  INSTRUCCIONES_RAPIDAS.txt  MIGRATION_GUIDE.md  README.md  deployment_verification.py  main_model.py  orc_bridge.py  pyproject.toml  requirements.txt  run_app.bat  setup.cfg  setup.py  streamlit_app.py  test_imports.py
config/: default_parameters.yaml
docs/: installation.md
requirements/: base.txt  dev.txt  prod.txt
scripts/: run_app.py  setup.py
src/orc/: __init__.py
src/orc/analysis/: __init__.py  comparison.py  export.py  metrics.py
src/orc/config/: __init__.py  parameters.py  settings.py
src/orc/core/: __init__.py  physics.py  simulation.py  validation.py
src/orc/models/: __init__.py  initial_conditions.py  rotary_cutter.py  torque_functions.py
tests/: __init__.py  test_efficiency_analysis.py  test_migration.py
tests/test_core/: __init__.py  test_physics.py
