[flake8]
max-line-length = 88
extend-ignore = 
    # E203: whitespace before ':' (conflicts with black)
    E203,
    # W503: line break before binary operator (conflicts with black)
    W503,
    # E501: line too long (handled by black)
    E501
exclude = 
    .git,
    __pycache__,
    .venv,
    venv,
    env,
    .env,
    build,
    dist,
    *.egg-info,
    .pytest_cache,
    .mypy_cache,
    .coverage,
    htmlcov,
    docs/_build
per-file-ignores =
    # __init__.py files can have unused imports
    __init__.py:F401
    # Test files can have unused imports and long lines
    tests/*:F401,E501
    # Scripts can have longer lines
    scripts/*:E501

[metadata]
license_files = LICENSE
